<!--<resources>-->
<!--    <string name="picture_camera_roll">相机胶卷</string>-->
<!--    <string name="picture_cancel">取消</string>-->
<!--    <string name="picture_take_picture">拍摄</string>-->
<!--    <string name="picture_rule">不能同时选择图片或视频</string>-->
<!--    <string name="picture_message_max_num">你最多可以选择%1$s张图片</string>-->
<!--    <string name="picture_min_video_num">视频最低选择不能少于%1$s个</string>-->
<!--    <string name="picture_message_video_max_num">你最多可以选择%1$s个视频</string>-->
<!--    <string name="picture_preview">预览</string>-->
<!--    <string name="picture_please">请稍候...</string>-->
<!--    <string name="picture_done_front_num">%1$d/%2$d 完成</string>-->
<!--    <string name="picture_completed">已完成</string>-->
<!--    <string name="picture_done">完成</string>-->
<!--    <string name="picture_please_select">请选择</string>-->
<!--    <string name="picture_empty_title">无视频或照片\n</string>-->
<!--    <string name="picture_empty_audio_title">无音频文件\n</string>-->
<!--    <string name="picture_empty">你可以使用相机拍摄照片或视频</string>-->
<!--    <string name="picture_audio_empty">你可以使用系统录音录制音频</string>-->
<!--    <string name="picture_min_img_num">图片最低选择不能少于%1$s张</string>-->
<!--    <string name="gif_tag">动图</string>-->
<!--    <string name="picture_jurisdiction">读取内存卡权限被拒绝</string>-->
<!--    <string name="picture_camera">获取系统相机权限被拒绝</string>-->
<!--    <string name="picture_audio">获取系统录音权限被拒绝</string>-->
<!--    <string name="picture_video_toast">视频不可预览</string>-->
<!--    <string name="picture_record_video">录视频</string>-->
<!--    <string name="picture_photograph">拍照</string>-->
<!--    <string name="picture_long_chart">长图</string>-->
<!--    <string name="picture_warning">暂无媒体文件！</string>-->
<!--    <string name="picture_prompt">提示</string>-->
<!--    <string name="picture_prompt_content">是否保存图片至手机？</string>-->
<!--    <string name="picture_save_error">图片保存失败</string>-->
<!--    <string name="picture_save_success">图片保存成功至</string>-->
<!--    <string name="picture_all_audio">所有音频</string>-->
<!--    <string name="picture_tape">录音</string>-->
<!--    <string name="picture_play_audio">播放</string>-->
<!--    <string name="picture_stop_audio">停止</string>-->
<!--    <string name="picture_quit_audio">退出</string>-->
<!--    <string name="picture_pause_audio">暂停</string>-->
<!--    <string name="picture_error">图片已损坏</string>-->
<!--    <string name="picture_video_error">视频已损坏</string>-->
<!--    <string name="picture_audio_error">音频已损坏</string>-->
<!--    <string name="picture_confirm">确定</string>-->
<!--</resources>-->

<resources>
    <string name="picture_camera_roll">CameraRoll</string>
    <string name="picture_cancel">Cancel</string>
    <string name="picture_take_picture">Shot</string>
    <string name="picture_rule">not pictures or video</string>
    <string name="picture_min_video_num">Video Selection Cannot%1$sNumber</string>
    <string name="picture_message_max_num">You can choose the most%1$s Number Pictures</string>
    <string name="picture_preview">Preview</string>
    <string name="picture_please">Please later...</string>
    <string name="picture_done_front_num">%1$d/%2$d Ok</string>
    <string name="picture_completed">Completed</string>
    <string name="picture_done">Ok</string>
    <string name="picture_please_select">Please Select</string>
    <string name="picture_empty_title">No video or photos\n</string>
    <string name="picture_empty_audio_title">No audio file\n</string>
    <string name="picture_audio_empty">You can use system recordings to record audio</string>
    <string name="picture_empty">you can use your camera to take photos or videos</string>
    <string name="picture_min_img_num">Picture Selection Cannot%1$sNumber</string>
    <string name="gif_tag">gif</string>
    <string name="picture_audio">Access to system recording permission denied</string>
    <string name="picture_jurisdiction">Read memory card access denied</string>
    <string name="picture_camera">Get system camera permission denied</string>
    <string name="picture_video_toast">Video not Preview</string>
    <string name="picture_record_video">Record Video</string>
    <string name="picture_photograph">Photograph</string>
    <string name="picture_long_chart">Long</string>
    <string name="picture_warning">Media files！</string>
    <string name="picture_prompt">Prompt</string>
    <string name="picture_prompt_content">Do you want to save pictures to your phone?</string>
    <string name="picture_save_error">Picture save failed</string>
    <string name="picture_save_success">Save picture successfully until</string>
    <string name="picture_all_audio">All audio</string>
    <string name="picture_tape">Tape</string>
    <string name="picture_play_audio">Play</string>
    <string name="picture_stop_audio">Stop</string>
    <string name="picture_quit_audio">Quit</string>
    <string name="picture_pause_audio">Pause</string>
    <string name="picture_error">The picture is corrupted</string>
    <string name="picture_video_error">The video is corrupted</string>
    <string name="picture_audio_error">The audio is corrupted</string>
    <string name="picture_confirm">Cancel</string>
    <string name="picture_message_video_max_num">You can choose%1$s videos at most</string>
</resources>
