<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/picture_dialog_shadow">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/picture_prompt"
        android:textColor="@color/picture_color_ff572e"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/picture_prompt_content"
        android:textColor="#53575e"
        android:textSize="15sp" />

    <View
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/tv_content"
        android:background="@color/picture_color_e" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/bottom_line"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/picture_btn_left_bottom_selector"
            android:text="@string/picture_cancel"
            android:textColor="@color/picture_color_529BeA" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/picture_color_e" />

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/picture_btn_right_bottom_selector"
            android:text="@string/picture_confirm"
            android:textColor="@color/picture_color_529BeA" />
    </LinearLayout>
</RelativeLayout>
