<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/picture_tv_photo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/picture_item_select_bg"
        android:gravity="center"
        android:text="@string/picture_photograph"
        android:textColor="@color/picture_color_53575e"
        android:textSize="14sp" />

    <View
        android:id="@+id/top_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/picture_tv_photo"
        android:background="@color/picture_color_e" />

    <TextView
        android:id="@+id/picture_tv_video"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/top_line"
        android:background="@drawable/picture_item_select_bg"
        android:gravity="center"
        android:text="@string/picture_record_video"
        android:textColor="@color/picture_color_53575e"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/video_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/picture_tv_video"
        android:background="@color/picture_color_e" />

    <TextView
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@id/video_line"
        android:background="@color/picture_color_e" />

    <TextView
        android:id="@+id/picture_tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/bottom_line"
        android:background="@drawable/picture_item_select_bg"
        android:gravity="center"
        android:text="@string/picture_cancel"
        android:textColor="@color/picture_color_53575e"
        android:textSize="14sp" />
</RelativeLayout>