<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/picture_color_white"
    android:fitsSystemWindows="true"
    tools:context="com.luck.picture.lib.PictureSelectorActivity">

    <include layout="@layout/picture_wechat_style_title_bar" />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:background="?attr/picture.bottom.bg"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/picture_id_preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:enabled="false"
            android:gravity="left|center"
            android:padding="12dp"
            android:text="@string/picture_preview"
            android:textColor="?attr/picture.preview.textColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/cb_original"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/picture_color_transparent"
            android:button="@color/picture_color_transparent"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/picture_original_image"
            android:textColor="@color/picture_color_53575e"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/picture_tvMediaNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/picture_tv_ok"
            android:background="?attr/picture.num.style"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/picture_color_white"
            android:textSize="12sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/picture_tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:enabled="false"
            android:gravity="center|left"
            android:paddingRight="12dp"
            android:text="@string/picture_please_select"
            android:textColor="?attr/picture.complete.textColor"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_buttom_layout"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="@color/picture_color_white"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_selected"
            android:layout_marginTop="14dp"
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_height="50dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e8e8e8"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="80dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:text="You can Upload up to 35 videos"
                />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="84dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textSize="14sp"
                android:background="@drawable/radius_bg_shape"
                android:textColor="@color/picture_color_white"
                android:text="Next (0)"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e8e8e8"
            android:layout_marginTop="80dp"
            />

    </RelativeLayout>



    <com.luck.picture.lib.widget.RecyclerPreloadView
        android:id="@+id/picture_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/select_buttom_layout"
        android:layout_below="@id/titleViewBg"
        android:background="@color/picture_color_white"
        />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/picture_empty"
        android:textColor="@color/picture_color_9b"
        android:textSize="18sp"
        android:visibility="invisible" />

</RelativeLayout>
